; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/processor-trace/libipt/test/src/extr_ptunit-block_cache.c_initially_empty.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/processor-trace/libipt/test/src/extr_ptunit-block_cache.c_initially_empty.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.bcache_fixture = type { i32 }
%struct.ptunit_result = type { i32 }
%struct.pt_bcache_entry = type { i32 }

@bfix_nentries = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.bcache_fixture*)* @initially_empty to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @initially_empty(%struct.bcache_fixture* %0) #0 {
  %2 = alloca %struct.ptunit_result, align 4
  %3 = alloca %struct.bcache_fixture*, align 8
  %4 = alloca i64, align 8
  %5 = alloca %struct.pt_bcache_entry, align 4
  %6 = alloca i32, align 4
  store %struct.bcache_fixture* %0, %struct.bcache_fixture** %3, align 8
  store i64 0, i64* %4, align 8
  br label %7

7:                                                ; preds = %25, %1
  %8 = load i64, i64* %4, align 8
  %9 = load i64, i64* @bfix_nentries, align 8
  %10 = icmp slt i64 %8, %9
  br i1 %10, label %11, label %28

11:                                               ; preds = %7
  %12 = call i32 @memset(%struct.pt_bcache_entry* %5, i32 255, i32 4)
  %13 = load %struct.bcache_fixture*, %struct.bcache_fixture** %3, align 8
  %14 = getelementptr inbounds %struct.bcache_fixture, %struct.bcache_fixture* %13, i32 0, i32 0
  %15 = load i32, i32* %14, align 4
  %16 = load i64, i64* %4, align 8
  %17 = call i32 @pt_bcache_lookup(%struct.pt_bcache_entry* %5, i32 %15, i64 %16)
  store i32 %17, i32* %6, align 4
  %18 = load i32, i32* %6, align 4
  %19 = call i32 @ptu_int_eq(i32 %18, i32 0)
  %20 = getelementptr inbounds %struct.pt_bcache_entry, %struct.pt_bcache_entry* %5, i32 0, i32 0
  %21 = load i32, i32* %20, align 4
  %22 = call i32 @pt_bce_is_valid(i32 %21)
  store i32 %22, i32* %6, align 4
  %23 = load i32, i32* %6, align 4
  %24 = call i32 @ptu_int_eq(i32 %23, i32 0)
  br label %25

25:                                               ; preds = %11
  %26 = load i64, i64* %4, align 8
  %27 = add nsw i64 %26, 1
  store i64 %27, i64* %4, align 8
  br label %7

28:                                               ; preds = %7
  %29 = call i32 (...) @ptu_passed()
  %30 = getelementptr inbounds %struct.ptunit_result, %struct.ptunit_result* %2, i32 0, i32 0
  store i32 %29, i32* %30, align 4
  %31 = getelementptr inbounds %struct.ptunit_result, %struct.ptunit_result* %2, i32 0, i32 0
  %32 = load i32, i32* %31, align 4
  ret i32 %32
}

declare dso_local i32 @memset(%struct.pt_bcache_entry*, i32, i32) #1

declare dso_local i32 @pt_bcache_lookup(%struct.pt_bcache_entry*, i32, i64) #1

declare dso_local i32 @ptu_int_eq(i32, i32) #1

declare dso_local i32 @pt_bce_is_valid(i32) #1

declare dso_local i32 @ptu_passed(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
